--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "beach-to-do-list-backend",
   "version": "1.0.0",
   "description": "The backend for the beach to do",
-  "main": "index.ts",
+  "main": ".build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "build": "tsc --build",
+    "test": "jest --config ./jest.config.json"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zachdj1994/beach-to-do-list-backend.git"
   },
-  "author": "",
+  "author": "Zach Jones",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zachdj1994/beach-to-do-list-backend/issues"
@@ -18,5 +20,12 @@
   "homepage": "https://github.com/zachdj1994/beach-to-do-list-backend#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
+    "jest": "^28.1.3",
+    "typescript": "^4.7.4"
   }
 }
