--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "build": "tsc --build",
-    "test": "jest --config ./jest.config.json"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
