--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": ".build/index.js",
   "scripts": {
     "prestart": "tsc --build",
+    "init": "bash setup_and_seed_database.sh && createdb $USER",
     "start": "node .",
     "test": "jest --watch"
   },
